2005-04-06  Neal H. Walfield  <neal@gnu.org>

	* startup.c: Include <hurd/physmem.h>.
	(allocate): Use hurd_pm_container_allocate_id, not a magic number.
	(map): Likewise for hurd_pm_container_map_id.

2005-03-09  Neal H. Walfield  <neal@gnu.org>

	* startup.c (map): Update argument marshalling of the
	container map RPC.

2005-02-12  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (boot_PROGRAMS): Move startup to ...
	(noinst_PROGRAMS): ... this new target.

2005-01-30  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c (start_elf): If MOD is MOD_ROOT_FS, set up the
	bootstrap information.

2005-01-27  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c (start_elf): Fix the change that removed the extra zero
	byte to argz - it removed all zero bytes between the arguments as
	well.
	
	* wortel.c (start_elf): Initialize PHYS_STARTUP->flags.  New
	variables PHDR and PHDR_LEN.  Calculate the virtual address of the
	program header if it is loaded and use them for PHYS_STARTUP->phdr
	and PHYS_STARTUP->phdr_len.

	* wortel-intern.h (struct wortel_module): Remove members
	HEADER_LOC and HEADER_SIZE.

	* startup.c (map): Loop over map requests until we mapped the
	whole range in case not all map items fit into a single reply
	message.	

2005-01-26  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.c (start_elf): Calculate the size of the file part of a
	mapping.

	* wortel.c (start_elf): Do not add an extra zero byte to argz.

	* wortel.c (start_elf): Initialize PHYS_STARTUP->envz and
	PHYS_STARTUP->envz_len.

2005-01-11  Neal H. Walfield  <neal@gnu.org>

	* startup.c (physmem_map): Rename . . .
	(allocate): . . . to this.  Rewrite it.
	(map): New function.
	(cmain): Call map, not physmem_map.
	* wortel.c (setup_components): Allocate an extra thread for the
	task server.
	(start_elf): Update assert.

2005-01-10  Bas Wijnen  <shevek@fmf.nl>

	* wortel.h (wortel_get_mem): Change grant_items to map_items to
	match their use.

2005-01-07  Neal H. Walfield  <neal@gnu.org>
